@@ -1,5 +1,16 @@
 2011-12-05  Lucas Forschler  <lforschler@apple.com>
 
+    Merge 95053
+
+    2011-09-13  Beth Dakin  <bdakin@apple.com>
+
+            Adding a comment I forgot to add before.
+
+            * rendering/RenderImage.cpp:
+            (WebCore::RenderImage::imageSizeForError):
+
+2011-12-05  Lucas Forschler  <lforschler@apple.com>
+
     Merge 95051.
     This restored a broken Changelog, which isn't necessary for the branch anyway.
 
